<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>sae.transport.comparison</groupId>
    <artifactId>IUT-SAE2.01-2.02</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.7</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21.0.7</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21.0.7</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <!-- Dépendance pour les tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Dépendance pour la partie graphe -->
        <dependency>
            <groupId>sae.transport.comparison</groupId>
            <artifactId>sae-s2</artifactId>
            <version>2026</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/sae-s2-2026.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>sae.transport.comparison</groupId>
            <artifactId>jgrapht-core</artifactId>
            <version>1.5.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jgrapht-core-1.5.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>sae.transport.comparison</groupId>
            <artifactId>jheaps</artifactId>
            <version>0.14</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jheaps-0.14.jar</systemPath>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>mac-aarch64</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>aarch64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>mac-aarch64</javafx.platform>
            </properties>
        </profile>
        <profile>
            <id>mac-x86</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>x86_64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>mac</javafx.platform>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                    <name>Linux</name>
                </os>
            </activation>
            <properties>
                <javafx.platform>linux</javafx.platform>
            </properties>
        </profile>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <javafx.platform>win</javafx.platform>
            </properties>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>11</release>
                    <compilerArgs>
                        <arg>--add-reads</arg>
                        <arg>sae.transport.comparison=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <encoding>UTF-8</encoding>
                    <doclint>none</doclint>
                    <show>protected</show>
                    <sourceFileExcludes>
                        <exclude>**/module-info.java</exclude>
                    </sourceFileExcludes>
                    <additionalJOptions>
                        <additionalJOption>--add-reads</additionalJOption>
                        <additionalJOption>sae.transport.comparison=ALL-UNNAMED</additionalJOption>
                    </additionalJOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <mainClass>sae.transport.comparison.AppTerminal</mainClass>
                    <additionalClasspathElements>
                        <additionalClasspathElement>${project.basedir}/lib/sae-s2-2026.jar</additionalClasspathElement>
                        <additionalClasspathElement>${project.basedir}/lib/jgrapht-core-1.5.1.jar</additionalClasspathElement>
                        <additionalClasspathElement>${project.basedir}/lib/jheaps-0.14.jar</additionalClasspathElement>
                    </additionalClasspathElements>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>sae.transport.comparison.AppFX</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
